# provide-telemetry

./: .actrc  .gitattributes  .gitignore  .max_loc_allowlist.yaml  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .secrets.baseline  .trufflehog-exclude-paths.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  commitlint.config.js  docker-compose.yml  pyproject.toml
.ci/: pymutant-policy-baseline.json  pymutant-profiles.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
baselines/: perf-go.json  perf-python.json  perf-rust.json  perf-typescript.json
ci/: init-go-workspace.sh  install_parity_deps.py  run_uv_sync_with_retry.sh  verify-collector-signals.sh  verify-go-consumer-module.sh  wait-for-collector.sh
docs/: API.md  ARCHITECTURAL_POSITIONING.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CAPABILITY_MATRIX.md  COMPLIANCE.md  CONCURRENCY.md  CONFIGURATION.md  CONVENTIONS.md  DX_RUBRIC.md  INTERNALS.md  MUTATION_EXEMPTIONS.md  OPERATIONS.md  PARITY_ROADMAP.md  PERFORMANCE.md  PRODUCTION_PROFILES.md  RELEASE.md  go-fuzzing.md
e2e/: __init__.py  conftest.py  test_browser_trace_e2e.py  test_cross_language_trace_e2e.py  test_mock_otlp_cross_language_e2e.py  test_openobserve_e2e.py  test_three_way_trace_e2e.py
examples/: README.md
go/: .golangci.yml  CHANGELOG.md  Makefile  README.md  backend.go  backend_helpers_test.go  backend_registration_test.go  backpressure.go  backpressure_test.go  benchmark_test.go  cardinality.go  cardinality_test.go  classification.go  classification_rules_test.go  classification_test.go  config.go  config_apply_env_test.go  config_defaults_test.go  config_env.go  config_env_exporter.go  config_env_test.go  config_helpers.go  config_masking_test.go  config_parse_test.go  config_test.go  config_validation_test.go  consent.go  consent_gates_test.go  consent_nogovernance.go  consent_test.go  context.go  context_test.go  endpoint_validation.go  errors.go  errors_test.go  fingerprint.go  fingerprint_test.go  fuzz_test.go  go.mod  go.sum  (+82 more)
rust/: .cargo-mutants.toml  .gitignore  Cargo.toml  README.md  mutants.toml
rust/.cargo/: mutants.toml
rust/benches/: hot_path.rs
rust/examples/: contract_probe.rs  e2e_cross_language_client.rs  e2e_cross_language_server.rs  emit_log_probe.rs  openobserve_01_emit_all_signals.rs  openobserve_02_verify_ingestion.rs  openobserve_03_hardening_profile.rs  openobserve_04_via_public_api.rs  runtime_probe.rs  telemetry_01_basic.rs  telemetry_02_w3c_propagation.rs  telemetry_03_sampling_and_backpressure.rs  telemetry_04_runtime_reconfigure.rs  telemetry_05_pii_and_cardinality_policy.rs  telemetry_06_exporter_resilience_modes.rs  telemetry_07_slo_and_health_snapshot.rs  telemetry_08_full_hardening_profile.rs  telemetry_09_error_handling_and_degradation.rs  telemetry_10_performance_metrics.rs  telemetry_11_lazy_loading_proof.rs  telemetry_12_error_fingerprint_and_sessions.rs  telemetry_13_security_hardening.rs  telemetry_14_data_governance.rs
rust/examples/support/: basic_telemetry.rs  data_governance.rs  e2e_shared.rs  error_degradation.rs  error_sessions.rs  exporter_resilience.rs  full_hardening.rs  lazy_loading.rs  openobserve_shared.rs  performance_metrics.rs  pii_cardinality.rs  runtime_reconfigure.rs  sampling_backpressure.rs  security_hardening.rs  slo_health.rs  w3c_propagation.rs
rust/src/: _lock.rs  backpressure.rs  cardinality.rs  classification.rs  classification_tests.rs  config.rs  consent.rs  consent_tests.rs  context.rs  errors.rs  fingerprint.rs  health.rs  health_tests.rs  lib.rs  logger.rs  metrics.rs  metrics_tests.rs  otel.rs  pii.rs  pii_tests.rs  policies.rs  propagation.rs  receipts.rs  receipts_tests.rs  resilience.rs  resilience_inner_callback_tests.rs  resilience_state_tests.rs  resilience_tests.rs  runtime.rs  runtime_logging_tests.rs  runtime_tests.rs  sampling.rs  schema.rs  secret_patterns_generated.rs  setup.rs  slo.rs  testing.rs  tracer.rs  tracer_tests.rs  tracing.rs
rust/src/config/: from_env.rs  from_env_tests.rs  mod.rs  parse.rs  parse_tests.rs  redact.rs
rust/src/logger/: emit.rs  emit_tests.rs  levels.rs  levels_tests.rs  log_trait_tests.rs  mod.rs  pretty.rs  pretty_tests.rs  processors.rs  processors_edge_tests.rs  processors_message_pii_tests.rs  processors_tests.rs  tests.rs  tests_config.rs  tests_event_flow.rs  tests_logger_api.rs
rust/src/otel/: async_runtime.rs  endpoint.rs  grpc.rs  logs.rs  logs_export_runtime_tests.rs  logs_export_test_support.rs  logs_export_tests.rs  logs_tests.rs  metrics.rs  metrics_tests.rs  mod.rs  resilient.rs  resilient_forwarding_tests.rs  resilient_health_tests.rs  resilient_log_metric_tests.rs  resilient_span_tests.rs  resource.rs  traces.rs
rust/src/otel/logs_export_test_support/: tests.rs
rust/tests/: cardinality_test.rs  config_test.rs  governance_test.rs  integration_setup_test.rs  integration_test.rs  logger_guard_test.rs  logger_identity_sampling_test.rs  logger_levels_test.rs  logger_test.rs  logger_wrapper_surface_test.rs  metrics_otel_mutation_tests.rs  metrics_test.rs  mutation_classification_tests.rs  mutation_config_tests.rs  mutation_consent_tests.rs  mutation_health_tests.rs  mutation_remaining_tests.rs  mutation_resilience_tests.rs  mutation_slo_tests.rs  no_governance_test.rs  openobserve_test.rs  otlp_collector_test.rs  otlp_runtime_test.rs  parity_extra_test.rs  parity_pii_fixes_test.rs  parity_test.rs  propagation_test.rs  property_test.proptest-regressions  property_test.rs  resilience_missing_state_test.rs  runtime_additional_test.rs  runtime_provider_live_reload_test.rs  runtime_reconfigure_test.rs  runtime_runtime_policy_test.rs  runtime_test.rs  runtime_test_support.rs  shutdown_unreachable_endpoint_test.rs  testing_test.rs  tracing_test.rs
scripts/: __init__.py  act_local.sh  bench.sh  check_docs_accuracy.py  check_event_literals.py  check_licenses.py  check_max_loc.py  check_pragma_reasons.py  check_spdx_headers.py  check_version_sync.py  oss-fuzz-local.sh  (+13 more)
(+623 files in other folders)
