[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undef-telemetry"
dynamic = ["version"]
description = "Unified telemetry library for the Undef ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSES/*"]
authors = [{name = "tim", email = "code@tim.life"}]
keywords = ["telemetry", "observability", "opentelemetry", "structlog", "otel", "tracing", "metrics", "logging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]
dependencies = [
  "structlog>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/undef-games/undef-telemetry"
Repository = "https://github.com/undef-games/undef-telemetry"
Issues = "https://github.com/undef-games/undef-telemetry/issues"

[project.optional-dependencies]
otel = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-instrumentation-logging>=0.61b0",
]
fastapi = [
  "fastapi>=0.115.0",
  "starlette>=0.40.0",
]
all = [
  "undef-telemetry[otel,fastapi]",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.pytest11]
undef_telemetry = "undef.telemetry.testing"

[tool.setuptools.package-data]
"undef.telemetry" = ["py.typed"]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "build>=1.2.2",
  "codespell>=2.4.1",
  "hypothesis>=6.130.0",
  "mypy>=1.18.0",
  "mutmut>=3.3.1",
  "pip-audit>=2.7.0",
  "pip-licenses>=5.0.0",
  "playwright>=1.50.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.1.1",
  "pytest-randomly>=3.15.0",
  "pytest-rerunfailures>=14.0",
  "pytest-xdist>=3.8.0",
  "reuse>=6.2.0",
  "ruff>=0.14.5",
  "twine>=5.1.1",
  "ty>=0.0.18",
  "vulture>=2.14",
  "xenon>=0.9.3",
  "memray>=1.0; sys_platform == 'linux' or sys_platform == 'darwin'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
norecursedirs = [".*", "build", "dist", "mutants"]
markers = [
  "otel: tests that validate optional OpenTelemetry extras",
  "integration: tests that require external runtime dependencies",
  "e2e: end-to-end validation against a live telemetry backend",
  "tooling: tests that validate local development scripts/tooling",
  "memray: memory profiling stress tests (deselected by default, run with -m memray)",
  "slow: long-running tests excluded from default runs",
  "flaky: tests that may flake on slow CI — retried automatically via pytest-rerunfailures",
]
addopts = [
  "-p", "no:undef_telemetry",
  "-q",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "-m", "not e2e and not memray",
  "--cov=src/undef/telemetry",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]

[tool.coverage.run]
source = ["src/undef/telemetry"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["mutants"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "RUF", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S", "RUF012"]
"e2e/**/*.py" = ["ARG", "S", "SIM105", "RUF012"]
"scripts/**/*.py" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "opentelemetry.*",
]
ignore_missing_imports = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
call-top-callable = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
unused-type-ignore-comment = "ignore"

[tool.codespell]
skip = ".git,*.pyc,__pycache__,.venv,node_modules,uv.lock"
ignore-words-list = "ore,opps,wont,strat,nd,rade"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]

[tool.xenon]
max_absolute = "C"
max_modules = "B"
max_average = "A"

[tool.mutmut]
paths_to_mutate = ["src/undef/telemetry/"]
tests_dir = ["tests/"]
do_not_mutate = [
  "src/undef/telemetry/backpressure.py",
  "src/undef/telemetry/cardinality.py",
  "src/undef/telemetry/asgi/middleware.py",
  "src/undef/telemetry/health.py",
  "src/undef/telemetry/logger/core.py",
  "src/undef/telemetry/logger/processors.py",
  "src/undef/telemetry/metrics/fallback.py",
  "src/undef/telemetry/metrics/provider.py",
  "src/undef/telemetry/pii.py",
  "src/undef/telemetry/propagation.py",
  "src/undef/telemetry/resilience.py",
  "src/undef/telemetry/runtime.py",
  "src/undef/telemetry/sampling.py",
  "src/undef/telemetry/setup.py",
  "src/undef/telemetry/slo.py",
  "src/undef/telemetry/tracing/provider.py",
]
pytest_add_cli_args = ["--no-cov"]
pytest_add_cli_args_test_selection = [
  "-m",
  "not integration and not e2e and not otel and not tooling",
]
