# SPDX-FileCopyrightText: Copyright (C) 2026 provide.io llc
# SPDX-License-Identifier: Apache-2.0
# SPDX-Comment: Part of provide-telemetry.
#
[package]
name = "provide-telemetry"
version = "0.2.4"
edition = "2021"
rust-version = "1.81"
publish = false

[lib]
name = "provide_telemetry"
path = "src/lib.rs"

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio"] }
percent-encoding = "2.3.1"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "sync", "time"] }
tracing-opentelemetry = { version = "0.32", optional = true }
